[tool.poetry]
name = "pyqueues"
version = "0.1.0"
description = ""
authors = ["TM"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''



